--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ before_script:
 test:
   stage: test
   script:
-  - bundle exec jekyll build -d test
+  - bundle exec jekyll build -d test --config _config_gitlab.yml
   artifacts:
     paths:
     - test
@@ -20,7 +20,7 @@ test:
 pages:
   stage: deploy
   script:
-  - bundle exec jekyll build -d public
+  - bundle exec jekyll build -d public --config _config_gitlab.yml
   artifacts:
     paths:
     - public
